tests/ui/lifetimes/could-not-resolve-issue-121503.stderr
error[E0277]: the trait bound `impl FnMut(&mut Self): Allocator` is not satisfied
  --> $DIR/could-not-resolve-issue-121503.rs:6:35
   |
LL |     async fn box_ref_Struct(self: Box<Self, impl FnMut(&mut Self)>) -> &u32 {
   |                                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Allocator` is not implemented for `impl FnMut(&mut Self)`
   |
note: required by a bound in `Box`
  --> $SRC_DIR/alloc/src/boxed.rs:LL:COL
help: consider further restricting this bound
   |
LL |     async fn box_ref_Struct(self: Box<Self, impl FnMut(&mut Self) + std::alloc::Allocator>) -> &u32 {
   |                                                                   +++++++++++++++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
